# parcllabs-python

./: .gitignore  CHANGELOG.md  LICENSE  LONG_DESCRIPTION.rst  Makefile  Pipfile  README.md  Retrieve Gross Yield.csv  Retrieve Price Feed Volatility.csv  Retrieve Price Feeds.csv  Retrieve Rental Price Feeds.csv  Retrieve Rental Units Concentration.csv  Retrieve Top 2 Metros by Population.csv  Retrieve Top 2 Price Feed Markets.csv  api_latency_properties_test.json  pyproject.toml  requirements.txt  ruff.toml  scratch.py  setup.py  test.py  test_readme.md
.github/: ci.yml
data/: investor_metrics.csv  msa_parcl_ids_top50.csv  msa_parcl_metrics.csv
examples/: download_historical_metrics.py  download_units.py  operators.py
parcllabs/: __init__.py  __version__.py  _investor_metrics_housing_stock_ownership.py  _parcllabs_service.py  client.py  common.py  enums.py  exceptions.py  parcllabs_client.py  plabs_client.py
scripts/: copy_readme.py  extract_readme_cells.py  get_readme_version.py  sdk_latency.py  sdk_post_latency.py
src/: setup.py
tests/: conftest.py  test_for_sale_for_sale_inventory.py  test_for_sale_market_metrics.py  test_for_sale_market_metrics_service.py  test_investor_metrics_service.py  test_market_metrics_service.py  test_new_construction_metrics_service.py  test_parcl_labs_clients.py  test_parcl_labs_service.py  test_portfolio_market_metrics_service.py  test_portfolio_metrics_sf_new_listings_for_rent_rolling_counts.py  test_price_feed.py  test_price_feed_service.py  test_property.py  test_property_address.py  test_property_v2.py  test_search.py  (+3 more)
(+54 files in other folders)
